--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,4 +1,7 @@
-<h1>Create your list</h1>
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://api.caviar.tv/wp-content/uploads/2020/11/david_hasselhoff-true_survivor-david_sandberg.jpg)">
+  <h1>Create your list</h1>
+</div>
+
 
 
 <div class="container">
